# codecov-cpp-template

./: .travis.yml  CMakeLists.txt  README.md  codecovexample.cpp  get_code_cov.sh
